tests/cases/compiler-development/artifact/errors/diagnostic-condition-non-bool.diagnostic
diagnostic error code=T0001 family=type message="condition must be bool or integer-convertible, got string" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/control-flow/errors/while-non-bool.ari" display="tests/cases/control-flow/errors/while-non-bool.ari" bytes=87
  Label index=0 role=primary source_id=0 source="tests/cases/control-flow/errors/while-non-bool.ari" line=3 column=9 end_line=3 end_column=14 byte_start=47 byte_end=52 message=""
  Snippet label=0 text="  --> tests/cases/control-flow/errors/while-non-bool.ari:3:9\n   |\n 3 |   while value {\n   |         ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/control-flow/errors/while-non-bool.ari" line=3 column=3 end_line=3 end_column=8 byte_start=41 byte_end=46 message="while loop expects a condition value"
  Snippet label=1 text="  --> tests/cases/control-flow/errors/while-non-bool.ari:3:3\n   |\n 3 |   while value {\n   |   ^^^^^"
  Note index=0 location=none message="conditions accept bool values directly or integer values by comparing them with zero"
  Help index=0 location=none message="compare this value explicitly or convert it to bool before using it as a condition"
